# hakyll-test

./: .gitignore  README.md  about.md  cabal.project  contact.markdown  flake.nix  hakyll-test.cabal  index.html  log.md  shell.nix  site.hs  talk_dhall_pandoc.md  talks.md  treefmt.toml  unsafe_compiler.md
_site/: about.html  archive.html  contact.html  index.html
css/: default.css  default.hs  fonts.hs  old_default.css
data/: Talk.dhall  talks.dhall  talks.json
notes/: 2024-08-30-monitoring-observability.md  2024-09-05-security-best-practices.md  2024-09-10-aws-lambda-best-practices.md  2024-09-15-go-concurrency-patterns.md  2024-09-20-testing-strategies.md  2024-09-25-redis-caching-strategies.md  2024-09-30-web-accessibility-guidelines.md  2024-10-05-microservices-patterns.md  2024-10-10-python-async-programming.md  2024-10-15-graphql-vs-rest.md  2024-10-20-linux-command-line-tips.md  2024-10-25-nextjs-performance-optimization.md  2024-10-30-api-design-principles.md  2024-11-05-kubernetes-deployment-strategies.md  2024-11-10-typescript-advanced-types.md  2024-11-15-git-workflow-best-practices.md  2024-11-20-rust-ownership-guide.md  2024-11-25-postgresql-performance-tuning.md  2024-11-28-vim-productivity-tips.md  2024-12-01-css-grid-layout-guide.md  2024-12-05-elixir-genserver-basics.md  2024-12-08-docker-compose-dev-setup.md  2024-12-10-react-hooks-patterns.md  2024-12-15-haskell-monads-explained.md  2025-01-01-example-note.md  2025-01-02-testing-tags.md  test-modification-date.md
posts/: 2020-03-15-building-resilient-microservices.md  (+19 more)
templates/: archive.html  (+14 more)
(+10 files in other folders)
