name:               hakyll-test
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   ., src
  other-modules:    Site.Favicon
                  , Site.Context
                  , Site.Util
                  , Site.Talks
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , clay == 0.16.*
                  , time >= 1.9
                  , process >= 1.6
                  , directory >= 1.3
                  , filepath >= 1.4
                  , aeson >= 2.0
                  , bytestring >= 0.11
                  , pandoc >= 3.0
                  , text >= 2.0
                  , dhall >= 1.40
                  , temporary >= 1.3
                  , containers >= 0.6
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
